# libwscDrone

./: .gitignore  Makefile  MakefileUnrestricted  Makefile_bindings  doxygen.cfg  setupEnv.sh
extras/Bebop2GenericAPI/: Makefile
extras/Bebop2GenericAPI/inc/: Bebop2CExternIF.h  Bebop2CtrlIF.h  Bebop2Frame.h  Bebop2FrameIF.h
extras/Bebop2GenericAPI/src/: Bebop2CtrlIF.cpp
extras/PythonBindings/inc/: gilHandler.hpp
extras/PythonBindings/src/: BoostIF.cpp  PyBoostIF.cpp
extras/inc/: Bebop2FrameIF.h
extras/src/: Bebop2CExternIF.c  Bebop2FrameIF.cpp
inc/: Bebop2.h  CameraControl.h  DroneController.h  Pilot.h  PyBebop.h  Semaphore.h  Utils.h  VideoCallback.h  VideoDriver.h  gilHandler.hpp  wscDrone.h
pyBebop/: BebopApi.cpp  BebopApi.h  CMakeLists.txt  pyBebop.cpp
pyBebop/cmake/Modules/: BuildBoost.cmake
pyBebop/lib/: pyBebop_Bebop2.cpp  pyBebop_CameraControl.cpp  pyBebop_CameraControl.h  pyBebop_DroneController.cpp  pyBebop_DroneDiscovery.cpp  pyBebop_DroneDiscovery.h  pyBebop_Utils.cpp  pyBebop_VideoDecoder.h
src/: Bebop2.cpp  Callbacks.cpp  Callbacks.h  CameraControl.cpp  DroneController.cpp  Pilot.cpp  PyBebop.cpp  PyFrame.cpp  Utils.cpp  VideoDecoder.cpp  VideoDriver.cpp
